@@ -4,22 +4,34 @@ import io.vavr.control.Either;
 import pink.digitally.games.whot.whotcore.validation.Validator;
 
 import java.util.Collections;
+import java.util.Deque;
+import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Stream;
 
-public class GameModerator {
-    public List<WhotCardWithNumberAndShape> shuffle(List<WhotCardWithNumberAndShape> cards) {
+import static java.util.Arrays.asList;
+
+public class GameMediator {
+    private Deque<Player> players;
+
+    public void shuffle(LinkedList<WhotCardWithNumberAndShape> cards) {
         Collections.shuffle(cards);
-        return cards;
     }
 
-    public Either<String, Void> deal(List<WhotCardWithNumberAndShape> cards, Player... player) {
-        Validator<Integer> validator = getDealValidator(player.length, cards.size());
+    public void registerPlayers(Player... players) {
+        this.registerPlayers(asList(players));
+    }
+
+    public void registerPlayers(List<Player> players) {
+        this.players = new LinkedList<>(players);
+    }
+
+
+    public Either<String, Void> deal(Deque<WhotCardWithNumberAndShape> cards) {
+        Validator<Integer> validator = getDealValidator(players.size(), cards.size());
 
         if (validator.isValid()) {
             for (int i = 0; i < 6; i++) {
-                Stream.of(player)
-                        .forEach(p -> p.addCard(cards.remove(0)));
+                players.forEach(p -> p.addCard(cards.removeFirst()));
             }
             return Either.right(null);
         } else {
@@ -27,8 +39,17 @@ public class GameModerator {
         }
     }
 
+    public void updatePlayPile(Deque<WhotCardWithNumberAndShape> whotCards, Board board) {
+        throw new UnsupportedOperationException("Not yet implemented");
+    }
+
+    public void updateDrawPile(Deque<WhotCardWithNumberAndShape> whotCards, Board board) {
+        throw new UnsupportedOperationException("Not yet implemented");
+    }
+
     private Validator<Integer> getDealValidator(int numberOfPlayers, int numberOfCards) {
         int maximumNumberOfPlayers = numberOfCards / 10;
+
         return new Validator.ValidatorBuilder<Integer>()
                 .withFailureConditionAndMessage(number -> number < 2, "At least 2 Players is required")
                 .withFailureConditionAndMessage(number -> number > maximumNumberOfPlayers,
